add new banner for the home page

--- a/views/index.pug
+++ b/views/index.pug
@@ -38,7 +38,7 @@ html(lang="en")
               //- Script should add past events here
         .row
           .col-12
-            img.img(src="/images/space-new.jpg" style="width:100%;")
+            img.img(src="https://storage.googleapis.com/hackerspace-website/panorama_nov_27_2025_small.jpg" style="width:100%;")
           .col-12
             h1 Online tools
           .col-xl-4.col-lg-6.col-md-12(style="margin-bottom:25px;")
